# argonautica

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  LICENSE.txt  MANIFEST.in  README.md  README.tpl  argonautica.h  bindings.h  build.rs  docker-compose.yml  pyproject.toml  rustfmt.toml  setup.cfg  setup.py  wrapper.h
a2py/: Cargo.toml  README.md  a2py.py  manage.py  requirements.txt  script.py  setup.cfg  setup.py
a2py/a2py/: __init__.py  hasher.py
a2py/src/: lib.rs
argonautica/: Cargo.toml
argonautica-c/: Cargo.toml  README.md  README.tpl  build.rs
argonautica-c/include/: argonautica.h
argonautica-c/src/: error.rs  hash.rs  lib.rs  types.rs  utils.rs  verify.rs
argonautica-js/: README.md  binding.gyp  package.json
argonautica-js/src/: module.c
argonautica-py/: .gitignore  .python-version  Cargo.toml  MANIFEST.in  README.md  benchmark.py  requirements-dev-pypy.txt  requirements-dev.txt  script.py  setup.py
argonautica-py-test/: requirements-dev.txt
argonautica-py/argonautica/: __init__.py  _rust.py  _rust__ffi.py  argon2.py  argonautica.h  config.py  data.py  defaults.py  ffi.py  hasher.py  other.py  utils.py  verifier.py
argonautica-py/argonautica/core/: argon2.py  ffi.py  hasher.py  verifier.py
argonautica-py/docs/: Makefile
argonautica-py/docs/source/: conf.py  index.rst
argonautica-py/examples/: argon2.py  configuration.py  configuration2.py  configuration3.py  hash_raw.py  hasher.py  random_salt.py  verifier.py
argonautica-py/rust/: Cargo.toml
argonautica-py/rust/src/: lib.rs
argonautica-py/src/: lib.rs
argonautica-py/test/: test_hash1.py  test_hash2.py
argonautica-rs/: Cargo.toml  README.md  README.tpl  build.rs
argonautica-rs/benches/: bench_crates.rs  bench_fast_but_insecure.rs  bench_inputs.rs  bench_threads.rs
argonautica-rs/examples/: calibrate_timing.rs  example_actix_web.rs  example_custom.rs  example_non_blocking.rs  example_serde.rs  example_simple.rs  example_very_simple.rs  generate_secret_key.rs
argonautica-rs/src/: error.rs  error_kind.rs  hasher.rs  lib.rs  utils.rs  verifier.rs
argonautica-rs/src/backend/: mod.rs
argonautica-rs/src/backend/c/: decode.rs  encode.rs  hash_raw.rs  mod.rs
argonautica-rs/src/backend/rust/: decode.rs  encode.rs  mod.rs
argonautica-rs/src/backend/rust/core/: mod.rs
argonautica-rs/src/config/: backend.rs  defaults.rs  flags.rs  hasher_config.rs  mod.rs  variant.rs  verifier_config.rs  version.rs
argonautica-rs/src/errors/: configuration_error.rs  data_error.rs  encoding_error.rs
argonautica-rs/src/input/: additional_data.rs  container.rs  mod.rs  password.rs  salt.rs  secret_key.rs
argonautica-rs/src/output/: hash_raw.rs  mod.rs
argonautica-rs/tests/: tests.rs
argonautica-rs/tests/c/src/: test_low_level.c  verify.c
argonautica-sys/: Cargo.toml  build.rs
argonautica-sys/src/: ffi.rs  lib.rs
argonautica-ts/: README.md
benches/: bench_crates.rs  bench_fast_but_insecure.rs  bench_hasher.rs  bench_inputs.rs  bench_threads.rs  benches.rs  hamlet.txt
docker/: musl.Dockerfile
examples/: bindgen.rs  calibrate_timing.rs  example.env  example.rs  example_actix_web.rs  example_configuration.rs  example_custom.rs  example_non_blocking.rs  example_serde.rs  example_simple.rs  example_very_simple.rs  generate_random_secret_key.rs  generate_secret_key.rs  hash_passwords.rs  secret_key.rs
include/: blake2.h  core.h
jasonus-py/: MANIFEST.in  requirements.txt
jasonus-py/a2py/: __init__.py  ffi.py  hasher.py  verifier.py
src/: README.md  argon2.rs  argon2_builder.rs  error.rs  error_kind.rs  external.rs  ffi.rs  hasher.rs  lib.rs  temp.txt  utils.rs  verifier.rs
src/backend/: mod.rs
src/backend/c/: decode.rs  encode.rs  error.rs  hash_raw.rs  mod.rs  verify.rs
src/backend/rust/: decode.rs  encode.rs  hash_raw.rs  mod.rs  verify.rs
src/backend/rust/core/: mod.rs
src/config/: backend.rs  config.rs  defaults.rs  flags.rs  hasher_config.rs  mod.rs  variant.rs  verifier_config.rs  version.rs
src/configuration/: config.rs  flags.rs  mod.rs  variant.rs  version.rs
src/data/: additional_data.rs  data.rs  mod.rs  password.rs  read.rs  salt.rs  salt_new.rs  secret_key.rs
src/error/: error.rs  error_kind.rs  mod.rs
src/errors/: configuration_error.rs  data_error.rs  mod.rs  parse_error.rs
src/input/: additional_data.rs  data.rs  password.rs  salt.rs  secret_key.rs
src/output/: hash_raw.rs  mod.rs
src/parameters/: mod.rs  salt.rs  secret_key.rs
tests/: test_config.rs  test_data.rs  test_hasher.rs  test_serialization.rs  test_verifier.rs  tests.rs
tests/c/: CMakeLists.txt  Makefile  test  test.c  tests.c
tests/c/src/: argon2.h  hash.c  test.c  test.h  test_hash_c.c  test_hash_no_secret.c  test_hash_secret.c  test_high_level.c  utils.c  verify.c
