[package]
name = "a2"
version = "0.1.0" # remember to update html_root_url

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
categories = ["Algorithms", "API bindings", "Authentication", "Cryptography"]
description = "Argon2 password hashing"
documentation = "https://docs.rs/a2"
homepage = "https://github.com/bcmyers/a2"
keywords = ["argon2", "argon2d", "argon2i", "argon2id", "crypto", "cryptography", "hash", "hashing", "password", "passwords", "security"]
license = "MIT/Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/bcmyers/a2"

build = "build.rs"
links = "argon2"

[features]
development = ["bindgen", "blake2-rfc"]

[dependencies]
base64 = "0.9"
bindgen = { version = "0.37", optional = true }
bitflags = "1.0"
blake2-rfc = { version = "0.2", optional = true }
failure = "0.1"
futures = "0.1"
futures-cpupool = "0.1"
lazy_static = "1.0"
log = "0.4"
nom = "4.0"
num_cpus = "1.8"
rand = "0.5"
scopeguard = "0.3"
serde = { version = "1.0", optional = true, features = ["derive"] }

[build-dependencies]
bindgen = "0.37"
cc = { version = "1.0.15", features = ["parallel"] }

[dev-dependencies]
actix-web = "0.6"
criterion = "0.2"
dotenv = "0.12"
env_logger = "0.5"
futures-timer = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[[bench]]
name = "bench_fast_but_insecure"
harness = false

[[bench]]
name = "bench_inputs"
harness = false

[[bench]]
name = "bench_threads"
harness = false

[badges]
travis-ci = { repository = "bcmyers/a2", branch = "master" }
