[package]
name = "a2"
version = "0.1.0" # remember to update html_root_url

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
categories = ["Algorithms", "API bindings", "Authentication", "Cryptography"]
description = "Idiomatic Argon2 password hashing for Rust"
documentation = "https://docs.rs/a2"
homepage = "https://github.com/bcmyers/a2"
keywords = ["argon2", "argon2d", "argon2i", "argon2id", "crypto", "cryptography", "hash", "hashing", "password", "security"]
license = "MIT/Apache-2.0"
publish = false # TODO
readme = "README.md"
repository = "https://github.com/bcmyers/a2"

build = "build.rs"
links = "argon2"

[dependencies]
base64 = "0.9"
bitflags = "1.0"
failure = "0.1"
futures = "0.1"
futures-cpupool = "0.1"
log = "0.4"
nom = "4.0"
num_cpus = "1.8"
rand = "0.5"
scopeguard = "0.3"

# development
bindgen = { version = "0.37", optional = true }
blake2-rfc = { version = "0.2", optional = true }

# example_actix_web
actix-web = { version = "0.6", optional = true }
env_logger = { version = "0.5", optional = true }
futures-timer = { version = "0.1", optional = true }

# serde
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
development = ["bindgen", "blake2-rfc"]
example_actix_web = ["actix-web", "env_logger", "futures-timer", "serde"]

[build-dependencies]
bindgen = "0.37"
cc = { version = "1.0.15", features = ["parallel"] }

[dev-dependencies]
argon2rs = "0.2.5"
criterion = "0.2"
dotenv = "0.12"
rust-argon2 = "0.3.0"
serde_json = "1.0"

[[example]]
name = "calibrate_timing"
path = "examples/calibrate_timing.rs"

[[example]]
name = "example_actix_web"
path = "examples/example_actix_web.rs"
required-features = ["example_actix_web"]

[[example]]
name = "example_configuration"
path = "examples/example_configuration.rs"

[[example]]
name = "example_custom"
path = "examples/example_custom.rs"

[[example]]
name = "example_non_blocking"
path = "examples/example_non_blocking.rs"

[[example]]
name = "example_simple"
path = "examples/example_simple.rs"

[[example]]
name = "example_very_simple"
path = "examples/example_very_simple.rs"

[[example]]
name = "generate_secret_key"
path = "examples/generate_secret_key.rs"

[[bench]]
name = "bench_crates"
harness = false

[[bench]]
name = "bench_fast_but_insecure"
harness = false

[[bench]]
name = "bench_inputs"
harness = false

[[bench]]
name = "bench_threads"
harness = false

[badges]
travis-ci = { repository = "bcmyers/a2", branch = "master" }
