[package]
name = "argonautica"
version = "0.1.0" # remember to update html_root_url

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
categories = ["Algorithms", "API bindings", "Authentication", "Cryptography"]
description = "Idiomatic Argon2 password hashing for Rust"
documentation = "https://docs.rs/argonautica"
homepage = "https://github.com/bcmyers/argonautica"
keywords = ["argon2", "argon2d", "argon2i", "argon2id", "crypto", "cryptography", "hash", "hashing", "password", "security"]
license = "MIT/Apache-2.0"
publish = false # TODO
readme = "README.md"
repository = "https://github.com/bcmyers/argonautica"

build = "build.rs"
links = "argon2"

[dependencies]
base64 = "0.9"
bitflags = "1.0"
failure = "0.1"
futures = "0.1"
futures-cpupool = "0.1"
libc = "0.2"
log = "0.4"
nom = "4.0"
num_cpus = "1.8"
rand = "0.5"
scopeguard = "0.3"
serde = { version = "1.0", optional = true, features = ["derive"] }

# benches
argon2rs = { version = "0.2.5", features = ["simd"], optional = true }
criterion = { version = "0.2", optional = true }
md5 = { version = "0.3.7", optional = true }
rust-argon2 = { version = "0.3.0", optional = true }
sha2 = { version = "0.7.1", optional = true }

# development
bindgen = { version = "0.37", optional = true }
blake2-rfc = { version = "0.2", optional = true }
tempdir = { version = "0.3", optional = true }

# example_actix_web
actix-web = { version = "0.6", optional = true }
env_logger = { version = "0.5", optional = true }
futures-timer = { version = "0.1", optional = true }

[features]
actix_web = ["actix-web", "env_logger", "futures-timer", "serde"]
benches = ["argon2rs", "criterion", "md5", "rust-argon2", "sha2"]
development = ["bindgen", "blake2-rfc", "tempdir"]
nightly = []
without_simd = []

[build-dependencies]
bindgen = "0.37"
cbindgen = "0.6"
cc = { version = "1.0.15", features = ["parallel"] }
failure = "0.1"
tempdir = "0.3"

[dev-dependencies]
dotenv = "0.13"
lazy_static = "1.0"
serde_json = "1.0"

[[example]]
name = "calibrate_timing"
path = "examples/calibrate_timing.rs"

[[example]]
name = "example_actix_web"
path = "examples/example_actix_web.rs"
required-features = ["actix_web"]

[[example]]
name = "example_custom"
path = "examples/example_custom.rs"

[[example]]
name = "example_non_blocking"
path = "examples/example_non_blocking.rs"

[[example]]
name = "example_serde"
path = "examples/example_serde.rs"
required-features = ["serde"]

[[example]]
name = "example_simple"
path = "examples/example_simple.rs"

[[example]]
name = "example_very_simple"
path = "examples/example_very_simple.rs"

[[example]]
name = "generate_secret_key"
path = "examples/generate_secret_key.rs"

[[bin]]
name = "foo"
path = "src/bin/foo.rs"

[[bin]]
name = "generate_bindings"
path = "src/bin/generate_bindings.rs"
required-features = ["development"]

[[bench]]
name = "bench_crates"
harness = false
required-features = ["benches", "nightly"]

[[bench]]
name = "bench_fast_but_insecure"
harness = false
required-features = ["benches"]

[[bench]]
name = "bench_inputs"
harness = false
required-features = ["benches"]

[[bench]]
name = "bench_threads"
harness = false
required-features = ["benches"]

[profile.bench]
codegen-units = 1

[profile.release]
codegen-units = 1

[profile.test]
opt-level = 3

[badges]
travis-ci = { repository = "bcmyers/argonautica", branch = "master" }
