[package]
name = "argonautica-c"
version = "0.1.1" # remember to update html_root_url

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
categories = ["algorithms", "api-bindings", "authentication", "cryptography"]
description = "C/C++ wrapper for argonautica"
documentation = "https://docs.rs/argonautica-c"
homepage = "https://github.com/bcmyers/argonautica"
keywords = ["argon2", "cryptography", "hash", "password", "security"]
license = "MIT/Apache-2.0"
publish = true # TODO
readme = "README.md"
repository = "https://github.com/bcmyers/argonautica"

build = "build.rs"

[lib]
name = "argonautica_c"
path = "src/lib.rs"
crate_type = ["cdylib"]

[features]
simd = ["argonautica/simd"]

[dependencies]
argonautica = { version = "0.1.1", path = "../argonautica-rs" }
itoa = "0.4"
libc = "0.2"

[build-dependencies]
cbindgen = "0.6"
