[package]
name = "argonautica-c"
version = "0.1.5" # remember to update html_root_url

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
categories = ["algorithms", "api-bindings", "authentication", "cryptography"]
description = "C/C++ wrapper for argonautica"
documentation = "https://docs.rs/argonautica-c"
homepage = "https://github.com/bcmyers/argonautica"
keywords = ["argon2", "cryptography", "hash", "password", "security"]
license = "MIT/Apache-2.0"
publish = true # TODO
readme = "README.md"
repository = "https://github.com/bcmyers/argonautica"

[lib]
name = "argonautica_c"
path = "src/lib.rs"
crate_type = ["cdylib"]

[[bin]]
name = "generate_bindings"
path = "src/bin/generate_bindings.rs"

[features]
simd = ["argonautica/simd"]

[dependencies]
argonautica = { version = "0.1.5", path = "../argonautica-rs" }
cbindgen = "0.6"
itoa = "0.4"
libc = "0.2"

[badges]
travis-ci = { repository = "bcmyers/argonautica", branch = "master" }
