[package]
name = "argonautica"
version = "0.2.1" # remember to update html_root_url

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
categories = ["algorithms", "api-bindings", "authentication", "cryptography"]
description = "Idiomatic Argon2 password hashing for Rust"
documentation = "https://docs.rs/argonautica"
homepage = "https://github.com/bcmyers/argonautica"
keywords = ["argon2", "cryptography", "hash", "password", "security"]
license = "MIT/Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/bcmyers/argonautica"

build = "build.rs"
links = "argon2"

[lib]
name = "argonautica"
path = "src/lib.rs"
crate_type = ["lib"]

[features]
benches = ["argon2rs", "criterion", "md5", "rust-argon2", "sha2"]
simd = []

[dependencies]
base64 = "0.10"
bitflags = "1.1"
failure = "0.1"
futures = "0.1"
futures-cpupool = "0.1"
libc = "0.2"
log = "0.4"
nom = "5.0"
num_cpus = "1.10"
rand = "0.7"
scopeguard = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

# benches
argon2rs = { version = "0.2.5", optional = true }
criterion = { version = "0.2", optional = true }
md5 = { version = "0.6", optional = true }
rust-argon2 = { version = "0.4.0", optional = true }
sha2 = { version = "0.8", optional = true }

[build-dependencies]
bindgen = "0.58"
cfg-if = "0.1"
cc = { version = "1.0.37", features = ["parallel"] }
failure = "0.1"
tempfile = "3.1"

[dev-dependencies]
dotenv = "0.14"
lazy_static = "1.3"
serde_json = "1.0"

[[bench]]
name = "bench_crates"
harness = false
required-features = ["benches"]

[[bench]]
name = "bench_fast_but_insecure"
harness = false
required-features = ["benches"]

[[bench]]
name = "bench_inputs"
harness = false
required-features = ["benches"]

[[bench]]
name = "bench_threads"
harness = false
required-features = ["benches"]

[[example]]
name = "calibrate_timing"
path = "examples/calibrate_timing.rs"

[[example]]
name = "example_custom"
path = "examples/example_custom.rs"

[[example]]
name = "example_non_blocking"
path = "examples/example_non_blocking.rs"

[[example]]
name = "example_serde"
path = "examples/example_serde.rs"
required-features = ["serde"]

[[example]]
name = "example_simple"
path = "examples/example_simple.rs"

[[example]]
name = "example_very_simple"
path = "examples/example_very_simple.rs"

[[example]]
name = "generate_secret_key"
path = "examples/generate_secret_key.rs"

[badges]
travis-ci = { repository = "bcmyers/argonautica", branch = "master" }
